[gd_scene load_steps=10 format=3 uid="uid://b58wfgjgblbwg"]

[ext_resource type="Theme" uid="uid://dp5ckefnqmemk" path="res://assets/themes/ui_theme.tres" id="1_ldf1p"]
[ext_resource type="Script" uid="uid://dmm5qyxyualh7" path="res://scripts/ui/MainMenu.gd" id="1_wlpbi"]
[ext_resource type="VideoStream" uid="uid://dn4v3peevauvq" path="res://assets/video/fondo.ogv" id="2_bqojv"]
[ext_resource type="AudioStream" uid="uid://b7kx3qex2psm2" path="res://assets/audio/ui/hover.mp3" id="4_tyyoy"]

[sub_resource type="Animation" id="Animation_bqojv"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Fade:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Fade:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Fade:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("VBoxContainer:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(47, -0.075, 0, 0.075, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("VBoxContainer:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(235, -0.075, 0, 0.075, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_wlpbi"]
resource_name = "fade_in"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.16666667, 0, 0, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Fade:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.16666667, 0, 0, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Fade:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.16666667, 0, 0, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Fade:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.16666667, 0.16666667, 0, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="Animation" id="Animation_ldf1p"]
resource_name = "hover_in"
length = 0.15
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(47, -0.075, 0, 0.075, 0, 66, -0.025000002, -3.166667, 0, 0),
"times": PackedFloat32Array(0, 0.15)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(235, -0.075, 0, 0.075, 0, 235, -0.025000002, 0, 0, 0),
"times": PackedFloat32Array(0, 0.15)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ldf1p"]
_data = {
&"RESET": SubResource("Animation_bqojv"),
&"fade_in": SubResource("Animation_wlpbi"),
&"hover_in": SubResource("Animation_ldf1p")
}

[sub_resource type="Environment" id="Environment_ldf1p"]
glow_enabled = true
glow_intensity = 0.4
glow_bloom = 0.6

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_ldf1p")
script = ExtResource("1_wlpbi")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(1.6406295, 1.6406295)
mouse_filter = 2
stream = ExtResource("2_bqojv")
autoplay = true
loop = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 47.0
offset_top = 235.0
offset_right = 326.0
offset_bottom = 427.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="NewGameBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = ">Nueva Partida"
alignment = 0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="VBoxContainer/NewGameBtn"]
stream = ExtResource("4_tyyoy")
volume_db = 21.028
pitch_scale = 0.8

[node name="ContinueBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = ">Continuar"
alignment = 0

[node name="OptionsBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = ">Opciones"
alignment = 0

[node name="ExitBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = ">Salir"
alignment = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ldf1p")
}

[node name="Fade" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 1438.0
offset_bottom = 926.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ldf1p")

[connection signal="pressed" from="VBoxContainer/NewGameBtn" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitBtn" to="." method="_on_exit_pressed"]
